test_cases/pass/p21.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL active
active="FALSE"
IF (NOT active)
START IF
    PRINT: "inactive"
END IF
END SCRIPT
