test_cases/fail/f11.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
b="TRUE"
REPEAT WHEN (b)
START REPEAT
    b="FALSE"
END IF
END SCRIPT
